--- a/procountor_odoo_connector/views/menu_item.xml
+++ b/procountor_odoo_connector/views/menu_item.xml
@@ -5,6 +5,35 @@
         <menuitem id="procountor_instance"
                   name="Procountor Connector"
                   action="action_procountor_instance"
-                  web_icon="procountor_odoo_connector,static/description/icon.png"/>
+                  web_icon="procountor_odoo_connector,static/description/procountor-logo.png"/>
+
+        <menuitem id="dashboard_menu"
+                  name="Dashboard"
+                  parent="procountor_odoo_connector.procountor_instance"
+                  action="action_procountor_instance"
+                  sequence="-1"/>
+
+        <!-- Customer Menu -->
+        <menuitem id="customer_menu"
+                  name="Customers"
+                  parent="procountor_odoo_connector.procountor_instance"
+                  action="procountor_res_partner_action"
+                  sequence="0"/>
+
+        <!-- Log Menu & it's Items -->
+        <menuitem id="log_menu_of_procountor"
+                  name="Log"
+                  parent="procountor_odoo_connector.procountor_instance"
+                  sequence="3"/>
+        <menuitem id="menu_procountor_log"
+                  name="Log Book"
+                  parent="procountor_odoo_connector.log_menu_of_procountor"
+                  sequence="0"
+                  action="action_procountor_log"/>
+        <menuitem id="menu_procountor_log_line"
+                  name="Log Book Line"
+                  parent="procountor_odoo_connector.log_menu_of_procountor"
+                  sequence="1"
+                  action="action_procountor_log_line"/>
     </data>
 </odoo>
