--- a/procountor_odoo_connector/views/res_partner.xml
+++ b/procountor_odoo_connector/views/res_partner.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
+        <record id="res_partner_view_form_inherited_procountor" model="ir.ui.view">
+            <field name="name">Res Partner View Form Inherited</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//notebook" position='inside'>
+                    <page string="Procountor Information">
+                        <group>
+                            <field name="procountor_customer_id" readonly="1"/>
+                            <field name="procountor_instance_id" readonly="1"/>
+                            <field name="procountor_payment_method" readonly="0"/>
+                        </group>
+                    </page>
+                </xpath>
+            </field>
+        </record>
+
+        <!--        Action for export customer-->
+
+
+        <record id="action_wizard_export_customer_to_procountor" model="ir.actions.act_window">
+            <field name="name">Export Customer To Procountor</field>
+            <field name="res_model">export.customer.to.procountor</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+            <field name="binding_model_id" ref="model_res_partner"/>
+            <field name="binding_view_types">list,form</field>
+        </record>
         <!-- Action -->
         <record id="procountor_res_partner_action" model="ir.actions.act_window">
             <field name="name">Procountor Res Partner</field>
