--- a/procountor_odoo_connector/wizard/export_customer_to_procountor.xml
+++ b/procountor_odoo_connector/wizard/export_customer_to_procountor.xml
@@ -11,8 +11,8 @@
                         <field name="procountor_instance_id" required="1"/>
                     </group>
                     <footer>
-                        <button string="Export Customer" class="oe_highlight" type="object"
-                                name="export_customer_to_procountor"/>
+                        <button string="Export / Update Customer" class="oe_highlight" type="object"
+                                name="export_or_update_customer_to_procountor"/>
                         <button string="Cancel" class="oe_highlight" special="cancel"/>
                     </footer>
                 </sheet>
