--- a/procountor_odoo_connector/views/res_partner.xml
+++ b/procountor_odoo_connector/views/res_partner.xml
@@ -33,7 +33,7 @@
             <field name="name">Procountor Partner</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.partner</field>
-            <field name="domain">[('procountor_instance_id', '!=', False)]</field>
+            <field name="domain">[('procountor_instance_id', '!=', False),('is_company','=',True)]</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
