--- a/procountor_odoo_connector/views/procountor_instance.xml
+++ b/procountor_odoo_connector/views/procountor_instance.xml
@@ -1,13 +1,25 @@
 <odoo>
     <data>
         <record id="action_procountor_customer_id" model="ir.actions.act_window">
-            <field name="name">Procountor Customer</field>
+            <field name="name">Procountor Customers</field>
             <field name="res_model">res.partner</field>
             <field name="view_id" ref="base.view_partner_tree"/>
             <field name="domain">[('procountor_instance_id', '=', active_id)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
-                    Procountor Customer will display here
+                    Procountor Customers will display here
+                </p>
+            </field>
+        </record>
+
+        <record id="action_procountor_product_id" model="ir.actions.act_window">
+            <field name="name">Procountor Products</field>
+            <field name="res_model">procountor.product.listing</field>
+            <field name="view_id" ref="procountor_odoo_connector.view_procountor_product_listing_tree"/>
+            <field name="domain">[('instance_id', '=', active_id)]</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    Procountor Products will display here
                 </p>
             </field>
         </record>
@@ -52,6 +64,10 @@
                                     string="Customers"
                                     icon="fa-users"/>
                             <button class="oe_stat_button" type="action"
+                                    name="%(procountor_odoo_connector.action_procountor_product_id)d"
+                                    string="Products"
+                                    icon="fa-product-hunt"/>
+                            <button class="oe_stat_button" type="action"
                                     name="%(procountor_odoo_connector.action_procountor_invoice_id)d" string="Invoices"
                                     icon="fa-list-ul"/>
                         </div>
@@ -75,6 +91,14 @@
                                     <field name="procountor_redirect_url" required="1"/>
                                     <field name="procountor_api_key" required="1"/>
                                     <field name="procountor_api_access_token" readonly="1"/>
+                                </group>
+                            </page>
+                            <page name="synced_information" string="Last Synced Detail">
+                                <group string="Last Synced Details">
+                                    <group>
+                                        <field name="last_product_synced_date" readonly="1"/>
+                                        <field name="last_synced_customer_date" readonly="1"/>
+                                    </group>
                                 </group>
                             </page>
                         </notebook>
@@ -134,7 +158,7 @@
                                             <a name="%(procountor_odoo_connector.procountor_res_partner_action)d"
                                                type="action"
                                                class="d-flex flex-column align-items-center">
-                                                <span class="fa-stack fa-lg" title="Customer">
+                                                <span class="fa-stack fa-lg" title="Customers">
                                                     <i class="fa fa-square-o fa-stack-2x"/>
                                                     <i class="fa fa-users fa-stack-1x"/>
                                                 </span>
@@ -142,10 +166,21 @@
                                             </a>
                                         </div>
                                         <div class="col-4 border-right">
+                                            <a name="%(procountor_odoo_connector.action_procountor_product_listing)d"
+                                               type="action"
+                                               class="d-flex flex-column align-items-center">
+                                                <span class="fa-stack fa-lg" title="Products">
+                                                    <i class="fa fa-square-o fa-stack-2x"/>
+                                                    <i class="fa fa-product-hunt fa-stack-1x"/>
+                                                </span>
+                                                <span class="text-muted">Products</span>
+                                            </a>
+                                        </div>
+                                        <div class="col-4 border-right">
                                             <a name="%(procountor_odoo_connector.action_procountor_invoice_id)d"
                                                type="action"
                                                class="d-flex flex-column align-items-center">
-                                                <span class="fa-stack fa-lg" title="Orders">
+                                                <span class="fa-stack fa-lg" title="Invoices">
                                                     <i class="fa fa-square-o fa-stack-2x"/>
                                                     <i class="fa fa-line-chart fa-stack-1x"/>
                                                 </span>
