--- a/procountor_odoo_connector/views/procountor_instance.xml
+++ b/procountor_odoo_connector/views/procountor_instance.xml
@@ -64,6 +64,7 @@
                         <group>
                             <group>
                                 <field name="company_id" required="1"/>
+
                             </group>
                         </group>
                         <notebook name="Notebook">
@@ -75,6 +76,14 @@
                                     <field name="procountor_redirect_url" required="1"/>
                                     <field name="procountor_api_key" required="1"/>
                                     <field name="procountor_api_access_token" readonly="1"/>
+                                </group>
+                            </page>
+                            <page name="procountor_invoice_configuration" string="Procountor Invoice Configuration">
+                                <group>
+                                    <group>
+                                        <field name="journal_id" domain="[('type', 'in', ('bank', 'cash'))]"/>
+                                        <field name="invoice_payment_days_limit"/>
+                                    </group>
                                 </group>
                             </page>
                         </notebook>
